vs rendering: vertically align FixedValue within Tuple
CMK-14910

--- a/web/htdocs/themes/facelift/scss/_main.scss
+++ b/web/htdocs/themes/facelift/scss/_main.scss
@@ -624,6 +624,15 @@ table.vs_dict_text {
   }
 }
 
+@mixin floating-text-mixin {
+  display: inline-block;
+  height: $input-field-height;
+  margin: $input-field-margin;
+  line-height: $input-field-height;
+  vertical-align: bottom;
+  box-sizing: border-box;
+}
+
 table.valuespec_tuple {
   border-collapse: collapse;
 
@@ -636,6 +645,10 @@ table.valuespec_tuple {
 
     &.tuple_left {
       vertical-align: middle;
+    }
+
+    &.tuple_right.has_title > span.vs_fixed_value {
+      @include floating-text-mixin;
     }
 
     &.tuple_td {
